--- a/pokemon-teams-frontend/index.html
+++ b/pokemon-teams-frontend/index.html
@@ -15,5 +15,7 @@
     </main>
 
     <script src="./src/index.js"></script>
+    <script src="./src/pokemon.js"></script>
+    <script src="./src/trainer.js"></script>
   </body>
 </html>
